syntax = "proto3";

package bandit.services.ruletest;

option go_package = "./ruletest";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";

service RuleTestService {
  rpc DoLoadTest(LoadTestRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/test/load"
      body: "*"
    };
  };
  rpc DoEfficiencyTest(EfficiencyTestRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/test/efficiency"
      body: "*"
    };
  };
}

message LoadTestRequest {
  uint64 parallel_count = 1;
  uint64 target_rps = 2;
  google.protobuf.Duration duration = 3;
}

message EfficiencyTestRequest {
  uint64 target_rps = 1;
  google.protobuf.Duration duration = 2;
}
